<resources>
	<string name="app_name">PocketInvEditor Pro</string>
	<string name="select_file">Choose file from SD</string>
	<string name="select_world">Select world</string>
	<string name="inventory">Inventory</string>
	<string name="select_slot">Select inventory slot</string>
	<string name="item_id">Item ID:</string>
	<string name="item_damage">Item damage:</string>
	<string name="item_count">Amount:</string>
	<string name="item_id_browse">Browse...</string>
	<string name="loading">Loading...</string>
	<string name="edit_inventory">Edit inventory</string>
	<string name="edit_world_info">Edit world info</string>
	<string name="lastplayed">Last played</string>
	<string name="seed">Seed:</string>
	<string name="copy_seed">Copy seed</string>
	<string name="saved">Saved</string>
	<string name="savefailed">Save failed.</string>
	<string name="backup">Create backup</string>
	<string name="backupcreated">Backup Created:</string>
	<string name="backupfailed">Backup failed.</string>
	<string name="backup_start">Starting backup. This may take a while.</string>
	<string name="about_about">About</string>
	<string name="change">Change</string>
	<string name="gamemode">Gamemode:</string>
	<string name="gamemode_survival">Survival</string>
	<string name="gamemode_creative">Creative</string>
	<string name="main_edit_world_info">Edit world info</string>
	<string name="item_filter_hint">Search...</string>
	<string name="world_info_time">Time:</string>
	<string name="world_info_spawn_to_player">Move spawn to player location</string>
	<string name="invalid_number">Invalid value</string>
	<string name="world_info_time_set_morning">Set to morning</string>
	<string name="world_info_time_set_night">Set to night</string>
	<string name="world_info_player_location">Player location:</string>
	<string name="world_info_half_hearts">Half-hearts:</string>
	<string name="world_info_set_to_full_health">Set to full health</string>
	<string name="world_info_set_to_infinite_health">Set to infinite health</string>
	<string name="world_info_folder">Folder:</string>
	<string name="folder_exists">Folder already exists; choose a new name</string>
	<string name="folder_rename_failed">Failed to rename folder</string>
	<string name="slot_fillslot">Fill slot</string>
	<string name="slot_maxcountslot">255 in slot</string>
	<string name="slot_duplicate">Duplicate</string>
	<string name="slot_delete">Delete</string>
	<string name="world_info_warp_to_spawn">Warp to spawn</string>
	<string name="world_info_sideways_mode">Activate sideways player model glitch:</string>
	<string name="world_info_move_player">Move Player</string>
	<string name="entity_item">Dropped item</string>
	<string name="entity_zombie">Zombie</string>
	<string name="entity_chicken">Chicken</string>
	<string name="entity_cow">Cow</string>
	<string name="entity_pig">Pig</string>
	<string name="entity_sheep">Sheep</string>
	<string name="entity_creeper">Creeper</string>
	<string name="entity_skeleton">Skeleton</string>
	<string name="entity_spider">Spider</string>
	<string name="entity_pigzombie">Zombie Pigman</string>
	<string name="entity_primedtnt">Primed TNT</string>
	<string name="entity_arrow">Arrow</string>
	<string name="entity_snowball">Snowball</string>
	<string name="entity_thrownegg">Thrown egg</string>
	<string name="entity_painting">Painting</string>
	<string name="entity_fallingblock">Falling block</string>
	<string name="entity_minecart">Minecart</string>
	<string name="entity_wolf">Wolf</string>
	<string name="entity_villager">Villager</string>
	<string name="entity_mushroom_cow">Mooshroom</string>
	<string name="entity_slime">Slime</string>
	<string name="entity_enderman">Enderman</string>
	<string name="entity_silverfish">Silverfish</string>
	<string name="entity_squid">Squid</string>
	<string name="entity_bat">Bat</string>
	<string name="entity_cave_spider">Cave Spider</string>
	<string name="entity_ghast">Ghast</string>
	<string name="entity_lava_slime">Magma Cube</string>
	<string name="entity_fishing_hook">Fishing Hook</string>
	<string name="entity_fireball">Fireball</string>
	<string name="entity_boat">Boat</string>
	<string name="entity_iron_golem">Iron Golem</string>
	<string name="entity_snow_golem">Snow Golem</string>
	<string name="entity_ocelot">Ocelot</string>
	<string name="entity_blaze">Blaze</string>
	<string name="entity_zombie_villager">Zombie Villager</string>
	<string name="entity_experience_potion">"Bottle o' Enchanting"</string>
	<string name="entity_experience_orb">Experience Orb</string>
	<string name="entity_thrown_potion">Potion</string>
	<string name="entity_lightning_bolt">Lightning Bolt</string>
	<string name="entity_small_fireball">Small Fireball</string>
	<string name="entity_rabbit">Rabbit</string>
	<string name="entity_witch">Witch</string>
	<string name="entity_thrown_ender_pearl">Ender Pearl</string>
	<string name="entity_tripod_camera">Camera</string>
	<string name="entity_minecart_hopper">Minecart with Hopper</string>
	<string name="entity_minecart_tnt">Minecart with TNT</string>
	<string name="entity_minecart_chest">Minecart with Chest</string>
	<string name="entity_unknown">Unknown entity type</string>
	<string name="entity_none">None</string>
	<string name="entities_info">View entities info</string>
	<string name="entities_edit">Edit entities</string>
	<string name="entities_none">No entities found.</string>
	<string name="entities_spawn_mobs">Spawn mobs</string>
	<string name="entities_spawn_drops">Spawn drops</string>
	<string name="entities_remove_entities">Remove entities</string>
	<string name="entities_cow_tipping">Cow tipping</string>
	<string name="entities_mob_tipping">Mob tipping</string>
	<string name="entities_mob_type">Mob:</string>
	<string name="entities_entity_type">Type:</string>
	<string name="entities_babyfy_mobs">Baby-fy animals</string>
	<string name="entities_replace_entities">Replace entities</string>
	<string name="entities_replace_with">Replace with:</string>
	<string name="apocowlypse">Nothing here</string>
	<string name="entities_angle">Angle:</string>
	<string name="entities_dye_all_sheep">Dye all sheep</string>
	<string name="entities_age_all_animals">Age all animals</string>
	<string name="entities_breed_all_animals">Breed All</string>
	<string name="entities_unbreed_all_animals">Unbreed All</string>
	<string name="entities_remove_all_entities">Remove all entities</string>
	<string name="entity_any">Any entity type</string>
	<string name="noworldsfound_title">Y U NO WORLDS?!</string>
	<string name="noworldsfound_text">"PocketInvEditor was unable to find any Minecraft PE worlds on this device.
		This program is designed to edit worlds created by the full version of Minecraft Pocket Edition by Mojang."</string>
	<string name="get_pro">Get PocketInvEditor Pro</string>
	<string name="get_pro_to_spawn_mobs">Upgrade to PocketInvEditor Pro to spawn mobs.</string>
	<string name="nothingtoseehere_activate">* I move away from the tablet to breathe in *</string>
	<string name="main_view_tileentities">View tile entities</string>
	<string name="main_edit_tileentities">Edit tile entities</string>
	<string name="warp_to_tile_entity">Warp to tile entity</string>
	<string name="edit_sign">Edit sign</string>
	<string name="reactor_is_initialized">Is initialized</string>
	<string name="reactor_has_finished">Has finished</string>
	<string name="reactor_progress">Progress</string>
	<string name="reactor_overtime">Set to overtime mode</string>
	<string name="get_pro_to_edit_containers">Upgrade to PocketInvEditor Pro to edit containers.</string>
	<string name="get_pro_to_edit_signs">Upgrade to PocketInvEditor Pro to edit text on signs.</string>
	<string name="get_pro_to_adjust_reactor">Upgrade to PocketInvEditor Pro to adjust Nether Reactors.</string>
	<string name="main_edit_terrain">Edit terrain</string>
	<string name="terrain_editing">Editing terrain. This may take a while.</string>
	<string name="terrain_burnbabyburn">@string/apocowlypse</string>
	<string name="terrain_replaceblocks">Replace blocks</string>
	<string name="terrain_setblocks">Set blocks</string>
	<string name="terrain_region_shift">Shift region</string>
	<string name="terrain_region_expand">Expand region</string>
	<string name="terrain_analyze">Analyze</string>
	<string name="terrain_autoselect">Auto-select region</string>
	<string name="terrain_autoselect_choose_marker_block">Choose marker block type</string>
	<string name="terrain_autoselect_not_found">Unable to autoselect: less than 2 blocks of marker type found</string>
	<string name="terrain_select_whole_world">Select whole world</string>
	<string name="terrain_block_counts">Block counts</string>
	<string name="terrain_coords_to_player">Use player coordinates</string>
	<string name="terrain_number_blocks_changed">blocks changed.</string>
	<string name="terrain_busy">Reading terrain data...</string>
	<string name="terrain_experimental">This feature is experimental. There may be lighting glitches in edited areas. Back up world before using.</string>
	<string name="terrain_for_help">For help, check the Minecraft Forums thread.</string>
	<string name="terrain_region_out_of_world">This region extends beyond the world boundaries. Would you like to automatically shrink it?</string>
	<string name="terrain_unable_to_shrink_region">Unable to shrink region.</string>
	<string name="block_type">Block type:</string>
	<string name="terrain_clipboard">Clipboard:</string>
	<string name="terrain_copy">Copy</string>
	<string name="terrain_paste">Paste</string>
	<string name="terrain_paste_without_air">Paste without air</string>
	<string name="terrain_schematic_export">Export clipboard</string>
	<string name="terrain_schematic_import">Import clipboard</string>
	<string name="terrain_schematic_exported">Clipboard exported to schematic</string>
	<string name="terrain_schematic_imported">Imported schematic to clipboard</string>
	<string name="terrain_schematic_export_fail">Failed to export clipboard</string>
	<string name="terrain_schematic_import_fail">Failed to import clipboard</string>
	<string name="terrain_schematic_input_name">Name for schematic:</string>
	<string name="terrain_radius">Radius:</string>
	<string name="terrain_hollow_sphere">Hollow sphere</string>
	<string name="terrain_solid_sphere">Solid sphere</string>
	<string name="terrain_hollow_dome">Hollow dome</string>
	<string name="terrain_solid_dome">Solid dome</string>
	<string name="terrain_coords_to_player_head">Head</string>
	<string name="terrain_coords_to_player_feet">Feet</string>
	<string name="terrain_hollow_cuboid">Hollow cuboid</string>
	<string name="terrain_hollow_pyramid">Hollow pyramid</string>
	<string name="terrain_solid_pyramid">Solid pyramid</string>
	<string name="terrain_cylinder">Cylinder</string>
	<string name="terrain_hollow">Hollow</string>
	<string name="terrain_fix_holes">Fix terrain holes in Multiplayer</string>
	<string name="terrain_fix_holes_description">This will mark your entire world as modified to force Minecraft PE to send the whole level when a player connects. This may help if you are experiencing problems where connecting players cannot see a portion of your world. This only needs to be done once per level.</string>
	<string name="terrain_generate_map">Generate map of area</string>
	<string name="file_exists">A file with this name already exists</string>
	<string name="terrain_width">Width (X):</string>
	<string name="terrain_height">Height (Y):</string>
	<string name="terrain_length">Length (Z):</string>
	<string name="loadout_export">Export loadout</string>
	<string name="loadout_import">Import loadout</string>
	<string name="loadout_import_replace">Replace current inventory</string>
	<string name="loadout_import_combine">Combine with current inventory</string>
	<string name="loadout_import_too_many_items">Some items from the loadout cannot fit into the inventory.</string>
	<string name="clear_inventory">Clear inventory</string>
</resources>