<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp">

	<CheckedTextView
		android:gravity="center_vertical"
		android:id="@+id/reactor_is_initialized"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:checkMark="?android:textCheckMark"
		android:text="@string/reactor_is_initialized"/>

	<CheckedTextView
		android:id="@+id/reactor_has_finished"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:checkMark="?android:textCheckMark"
		android:text="@string/reactor_has_finished"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/reactor_progress"/>

	<EditText
		android:id="@+id/reactor_progress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:numeric="signed"/>

	<Button
		android:id="@+id/reactor_overtime"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/reactor_overtime"/>

</LinearLayout>

